--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -45,9 +45,18 @@ test:
 
 about:
   home: https://github.com/capitalone/rubicon
+  doc_url: https://capitalone.github.io/rubicon/
   summary: Client library and CLI for model development and governance
   license: Apache-2.0
   license_file: LICENSE
+  description: |
+    Rubicon is a data science tool that captures and stores model training and 
+    execution information, like parameters and outcomes, in a repeatable and 
+    searchable way. Rubicon's git integration associates these inputs and outputs 
+    directly with the model code that produced them to ensure full auditability and 
+    reproducibility for both developers and stakeholders alike. While experimenting, 
+    the Rubicon dashboard makes it easy to explore, filter, visualize, and share 
+    recorded work.
 
 extra:
   recipe-maintainers:
