--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -27,10 +27,12 @@ requirements:
     - pandas >=1.0
     - fsspec >=0.8.7
     - intake >=0.5.2
+    - jupyter-dash
     - pyarrow >=0.18.0
     - python >=3.6
     - pyyaml >=5.4.0
     - s3fs >=0.4
+    - scikit-learn
     - prefect >=0.12.0
     - dash >=1.14.0
     - dash-bootstrap-components >=0.10.6
