--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,7 +34,9 @@ requirements:
     - prefect >=0.12.0
     - dash >=1.14.0
     - dash-bootstrap-components >=0.10.6
-
+    - dash-core-components
+    - dash-html-components
+    - dash-table
 test:
   imports:
     - rubicon_ml
