--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -22,18 +22,19 @@ requirements:
     - pip
     - python >=3.8
   run:
-    - click >=7.1
-    - dask >=2.12.0
-    - pandas >=1.0
-    - fsspec >=2021.4.0
-    - intake >=0.5.2
-    - pyarrow >=0.18.0
+    - click <=8.1.2,>=7.1
+    - dash <=2.3.1,>=2.0.0
+    - dash-bootstrap-components <=1.1.0,>=1.0.0
+    - dask <=2022.4.0,>=2.12.0
+    - fsspec <=2022.3.0,>=2021.4.0
+    - intake <=0.6.5,>=0.5.2
+    - pandas <=1.4.2,>=1.0
+    - prefect <=1.2.0,>=0.12.0
+    - pyarrow <=7.0.0,>=0.18.0
     - python >=3.8
-    - pyyaml >=5.4.0
-    - s3fs >=0.4
-    - prefect >=0.12.0
-    - dash >=2.0.0
-    - dash-bootstrap-components >=1.0.0
+    - pyyaml <=6.0,>=5.4.0
+    - s3fs <=2022.3.0,>=0.4
+
 test:
   imports:
     - rubicon_ml
