--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -34,7 +34,7 @@ requirements:
     - python >=3.8
     - pyyaml <=6.0,>=5.4.0
     - s3fs <=2022.11.0,>=0.4
-    - scikit-learn <=1.1.3,>=0.22.0
+    - scikit-learn <=1.2.0,>=0.22.0
 
 test:
   imports:
@@ -47,17 +47,15 @@ test:
 about:
   home: https://github.com/capitalone/rubicon-ml
   doc_url: https://capitalone.github.io/rubicon-ml/
-  summary: Client library and CLI for model development and governance
+  summary: library and CLI for standardizing model development and governance
   license: Apache-2.0
   license_file: LICENSE
   description: |
-    rubicon-ml is a data science tool that captures and stores model training and 
-    execution information, like parameters and outcomes, in a repeatable and 
-    searchable way. Rubicon's git integration associates these inputs and outputs 
-    directly with the model code that produced them to ensure full auditability and 
-    reproducibility for both developers and stakeholders alike. While experimenting, 
-    the Rubicon dashboard makes it easy to explore, filter, visualize, and share 
-    recorded work.
+    rubicon-ml is a machine learning solution designed to help standardize the model 
+    development lifecycle. rubicon-ml can track, visualize and share experiments with 
+    collaborators and reviewers as they develop, train and govern models designed 
+    to solve complex business problems. It simplifies model governance, auditability 
+    and reproducibility by tracking a wide range of model metadata.
 
 extra:
   recipe-maintainers:
