--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -24,17 +24,18 @@ requirements:
   run:
     - click <=8.1.3,>=7.1
     - dash <=2.13.0,>=2.0.0
-    - dash-bootstrap-components <=1.4.2,>=1.0.0
-    - fsspec <=2023.6.0,>=2021.4.0
+    - dash-bootstrap-components <=1.5.0,>=1.0.0
+    - fsspec <=2023.9.2,>=2021.4.0
     - intake <=0.7.0,>=0.5.2
-    - numpy <=1.25.2,>=1.22.0
-    - pandas <=2.0.3,>=1.0
+    - jsonpath-ng <=1.6.0,>=1.5.3
+    - numpy <=1.26.0,>=1.22.0
+    - pandas <=2.1.1,>=1.0
     - prefect <=1.2.4,>=0.12.0
     - pyarrow <=13.0.0,>=0.18.0
     - python >=3.8
     - pyyaml <=6.0.1,>=5.4.0
-    - s3fs <=2023.6.0,>=0.4
-    - scikit-learn <=1.3.0,>=0.22.0
+    - s3fs <=2023.9.2,>=0.4
+    - scikit-learn <=1.3.1,>=0.22.0
 
 test:
   imports:
