--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -35,7 +35,7 @@ requirements:
     - python >=3.8
     - pyyaml <=6.0.1,>=5.4.0
     - s3fs <=2024.2.0,>=0.4
-    - scikit-learn <=1.4.1,>=0.22.0
+    - scikit-learn <=1.4.1.post1,>=0.22.0
 
 test:
   imports:
